src/objects/Calce__c.object
<CustomObject>
    <fields>
        <fullName>Calce_Neto_Directo__c</fullName>
        <formula>net_direct_calce__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calce Neto Directo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calcee_Neto_Indirecto__c</fullName>
        <formula>net_indirect_calce__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calce Neto Indirecto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Early_Cancellations_Resource__c</fullName>
        <label>Cancelaciones Anticipadas Recurso</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Resource</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.sub_type__c</field>
            <operation>equals</operation>
            <value>03</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Get_Date__c</fullName>
        <formula>DATE(

(VALUE(LEFT(Name,4))), 

(VALUE(RIGHT(LEFT(Name,7),2))),

(VALUE(RIGHT(LEFT(Name,10),2))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Get Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>My_Sessions__c</fullName>
        <formula>IF ( Owner:User.Username = $User.Username, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stand_by__c</fullName>
        <label>Stand by</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.product_code__c</field>
            <operation>equals</operation>
            <value>PC00013</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Indirect</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.return__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sub_Total_Resource__c</fullName>
        <formula>term_deposit__c +  Vista_PJ__c +  income_input__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total Recurso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_total_Expense__c</fullName>
        <formula>expense_input__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub total Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vista_PJ__c</fullName>
        <label>Vista PJ</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.product_code__c</field>
            <operation>contains</operation>
            <value>PC00016</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Resource</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.return__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>bond_letter__c</fullName>
        <label>Bond Letter</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.product_code__c</field>
            <operation>contains</operation>
            <value>PC00011,PC00012</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Indirect</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.return__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>close_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>comex__c</fullName>
        <label>Comex</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.product_code__c</field>
            <operation>contains</operation>
            <value>PC00002,PC00003</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.return__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Direct</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>credit_letter__c</fullName>
        <label>Credit Letter</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.product_code__c</field>
            <operation>contains</operation>
            <value>PC00014,PC00015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Indirect</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.return__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>desc_letter_bill__c</fullName>
        <label>Desc/Letter/Bill</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.product_code__c</field>
            <operation>contains</operation>
            <value>PC00005,PC00006</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.return__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>direct_commitment__c</fullName>
        <label>Direct commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>direct_early_cancellations__c</fullName>
        <label>Cancelaciones Anticipadas Directas</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Direct</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.sub_type__c</field>
            <operation>equals</operation>
            <value>03</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>direct_regular_cancellations__c</fullName>
        <label>Cancelaciones Normales Directas</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Direct</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.sub_type__c</field>
            <operation>contains</operation>
            <value>cancelaciones del dia, Caida de Cartera</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>expense_input__c</fullName>
        <label>expense input</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>income_input__c</fullName>
        <label>income input</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>indirect_commitment__c</fullName>
        <label>Indirect commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>indirect_early_cancellations__c</fullName>
        <label>Cancelaciones Anticipadas Indirectas</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Indirect</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.sub_type__c</field>
            <operation>equals</operation>
            <value>03</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>indirect_regular_cancellations__c</fullName>
        <label>Cancelaciones Normales Indirectas</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Indirect</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.sub_type__c</field>
            <operation>contains</operation>
            <value>cancelaciones del dia, Caida de Cartera</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leasing__c</fullName>
        <label>Leasing</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.product_code__c</field>
            <operation>equals</operation>
            <value>PC00010</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.return__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>long_term_loan__c</fullName>
        <label>Long Term Loan</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.product_code__c</field>
            <operation>equals</operation>
            <value>PC00009</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.return__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>manager_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calce</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>net_direct_calce__c</fullName>
        <formula>sub_total_direct__c + portfolio_recovery__c - (direct_regular_cancellations__c+ direct_early_cancellations__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calce Neto Directo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>net_indirect_calce__c</fullName>
        <formula>sub_total_indirect__c -( indirect_early_cancellations__c + indirect_regular_cancellations__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calce Neto Indirecto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>net_resource_calce__c</fullName>
        <formula>+Sub_Total_Resource__c  - resource_regular_cancellations__c  - Early_Cancellations_Resource__c -  Sub_total_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calce Neto Recurso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>portfolio_loss__c</fullName>
        <label>Caida de Cartera</label>
        <summarizedField>Calce_Details__c.portfolio_fall_balance__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>contains</operation>
            <value>Direct,Indirect</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.sub_type__c</field>
            <operation>equals</operation>
            <value>Caida de Cartera</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>portfolio_recovery__c</fullName>
        <label>Recuperación de Cartera</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>reportcalce__c</fullName>
        <defaultValue>true</defaultValue>
        <label>reportcalce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>resource_regular_cancellations__c</fullName>
        <label>Cancelaciones Normales Recurso</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Resource</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.sub_type__c</field>
            <operation>contains</operation>
            <value>cancelaciones del dia</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>short_term_loan__c</fullName>
        <label>Short Term Loan</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.product_code__c</field>
            <operation>equals</operation>
            <value>PC00001</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.return__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Iniciado</fullName>
                </value>
                <value>
                    <fullName>En progreso</fullName>
                </value>
                <value>
                    <fullName>Compartido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sub_total_direct__c</fullName>
        <formula>desc_letter_bill__c + short_term_loan__c + long_term_loan__c + comex__c + leasing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total Directo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sub_total_indirect__c</fullName>
        <formula>credit_letter__c + bond_letter__c + Stand_by__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total Indirecto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>term_deposit__c</fullName>
        <label>Deposito a Plazo</label>
        <summarizedField>Calce_Details__c.amount_cancelled__c</summarizedField>
        <summaryFilterItems>
            <field>Calce_Details__c.product_code__c</field>
            <operation>contains</operation>
            <value>PC00018</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.type__c</field>
            <operation>equals</operation>
            <value>Resource</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.extension__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Calce_Details__c.return__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Calce_Details__c.calce_id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Calce</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BE_CalceLastSevenDay</fullName>
        <columns>NAME</columns>
        <columns>status__c</columns>
        <columns>Calcee_Neto_Indirecto__c</columns>
        <columns>Calce_Neto_Directo__c</columns>
        <columns>net_resource_calce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>close_date__c</field>
            <operation>lessOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Calce de los últimos siete días</label>
    </listViews>
    <listViews>
        <fullName>BE_CalceToday</fullName>
        <columns>NAME</columns>
        <columns>status__c</columns>
        <columns>Calcee_Neto_Indirecto__c</columns>
        <columns>Calce_Neto_Directo__c</columns>
        <columns>net_resource_calce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>close_date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Calce del día</label>
    </listViews>
    <listViews>
        <fullName>BE_CalceYesterday</fullName>
        <columns>NAME</columns>
        <columns>status__c</columns>
        <columns>Calcee_Neto_Indirecto__c</columns>
        <columns>Calce_Neto_Directo__c</columns>
        <columns>net_resource_calce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>close_date__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Calce de ayer</label>
    </listViews>
    <listViews>
        <fullName>Calce_Next_Week</fullName>
        <columns>NAME</columns>
        <columns>status__c</columns>
        <columns>Calcee_Neto_Indirecto__c</columns>
        <columns>Calce_Neto_Directo__c</columns>
        <columns>net_resource_calce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>close_date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Calce de la semana</label>
        <sharedTo>
            <group>Ejecutivos_de_Oficina</group>
            <group>Gerentes_de_Oficina</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mis_clientes</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Mis clientes</label>
        <sharedTo>
            <group>Gerentes_de_Oficina</group>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calce</pluralLabel>
    <recordTypes>
        <fullName>BE_Calce_RecordType</fullName>
        <active>true</active>
        <label>BE_Calce_RecordType</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BE_CalceClosed</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISCHANGED(status__c),ISPICKVAL(PRIORVALUE(status__c),&apos;Compartido&apos;), isClosed__c=true,$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;)</errorConditionFormula>
        <errorMessage>No se puede no puede modificar un calce cerrado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BE_CalceClosedManager</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISCHANGED(status__c),ISPICKVAL(PRIORVALUE(status__c),&apos;Compartido&apos;),manager_Id__c&lt;&gt;$User.Id,$Profile.Name &lt;&gt; &apos;System Administrator&apos;,$Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;)</errorConditionFormula>
        <errorMessage>No se puede modificar un calce compartido, por favor comuníquese con su gerente para esta acción.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BE_CalceDontChangeOwnerId</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISCHANGED( OwnerId),$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>No se puede cambiar el propietario del calce</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BE_NotEditName</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Name),$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>No tiene permisos para cambiar el nombre del calce</errorMessage>
    </validationRules>
</CustomObject>